# docs/swagger.yaml
@@ -3,15 +3,12 @@ definitions:
   helpers.Response:
     properties:
       detail:
-        description: Entity post with id 12345 not found
         type: string
       request:
-        description: PUT /posts/12345
         type: string
       time:
         type: string
       title:
-        description: Not Found
         type: string
     type: object
   helpers.Verse:
@@ -102,6 +99,34 @@ info:
   title: Music library API
   version: "1.0"
 paths:
+  /v1/all:
+    get:
+      description: Посмотреть все доступные песни с данными
+      operationId: get-all
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Song'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helpers.Response'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/helpers.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helpers.Response'
+      summary: Get All from mockserver
+      tags:
+      - MockServer
   /v1/songs:
     get:
       consumes:
